hphp/hack/test/typecheck/akempty/akempty_promotion_7.php.exp
File "akempty_promotion_7.php", line 9, characters 7-10:
Assignments can no longer be used as expressions. Pull the assignment out into a separate statement. (Parsing[1002])
File "akempty_promotion_7.php", line 12, characters 5-6:
Invalid argument (Typing[4110])
  File "akempty_promotion_7.php", line 15, characters 12-14:
  Expected `int`
  File "akempty_promotion_7.php", line 8, characters 8-12:
  But got `vec<string>`
